[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Upgrade_Button/Button.gd" type="Script" id=1]

[node name="Button" type="Button"]
margin_right = 486.0
margin_bottom = 186.0
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="VBoxContainer"]
margin_right = 476.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 28 )
text = "Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 476.0
margin_bottom = 46.0
text = "Level:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 476.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 20 )
text = "Description:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Atribute_descrption" type="Label" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 476.0
margin_bottom = 94.0
rect_min_size = Vector2( 0, 20 )
text = "10 > 12"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bonus10" type="Label" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 476.0
margin_bottom = 118.0
rect_min_size = Vector2( 0, 20 )
text = "Bonus Lv 10: ????"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bonus20" type="Label" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 476.0
margin_bottom = 142.0
rect_min_size = Vector2( 0, 20 )
text = "Bonus Lv 20: ????"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bonus30" type="Label" parent="VBoxContainer"]
margin_top = 146.0
margin_right = 476.0
margin_bottom = 166.0
rect_min_size = Vector2( 0, 20 )
text = "Bonus Lv 30: ????"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="Label" parent="VBoxContainer"]
margin_top = 170.0
margin_right = 476.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 20 )
text = "Price:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="." to="." method="_on_Button_button_up"]
